--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "modular-design",
     "static-files"
   ],
-  "author": "xiyewuqiu <xiyewuqiu@gmail.com>",
+  "author": "xiyewuqiu",
   "license": "MIT"
 }
