--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "deploy": "wrangler deploy",
     "build": "node build.js",
     "build:pages": "node build-pages.js",
+    "setup": "node setup-database.js",
     "db:init": "wrangler d1 execute wxchat --file=./database/schema.sql",
+    "db:init-admin": "wrangler d1 execute wxchat --file=./database/admin-schema.sql",
+    "db:init-all": "npm run db:init && npm run db:init-admin",
+    "db:reset": "wrangler d1 execute wxchat --command=\"DROP TABLE IF EXISTS admin_logs; DROP TABLE IF EXISTS daily_stats; DROP TABLE IF EXISTS sessions; DROP TABLE IF EXISTS users; DROP TABLE IF EXISTS messages; DROP TABLE IF EXISTS files; DROP TABLE IF EXISTS devices;\" && npm run db:init-all",
     "pages:dev": "npm run build:pages && wrangler pages dev ./public --compatibility-date=2025-06-17 --d1=DB=wxchat --r2=R2=wxchat",
     "pages:deploy": "npm run build:pages && wrangler pages deploy ./public --project-name=wxchat-pages --compatibility-date=2025-06-17",
     "pages:create": "wrangler pages project create wxchat-pages"
