--- a/wrangler-pages.toml
+++ b/wrangler-pages.toml
@@ -15,6 +15,9 @@ database_id = "b58dde57-d777-459f-a6b3-ae4de9c16368"
 binding = "R2"
 bucket_name = "wxchat"
 
-# 环境变量（如果需要）
+# 环境变量配置
 [vars]
 ENVIRONMENT = "production"
+ADMIN_USERNAME = "admin"
+ADMIN_PASSWORD = "admin123"
+JWT_SECRET = "your-jwt-secret-key-change-in-production"
