--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,12 @@ name = "wxchat"
 main = "worker/index.js"
 compatibility_date = "2025-06-17"
 
+# 环境变量配置
+[vars]
+ADMIN_USERNAME = "admin"
+ADMIN_PASSWORD = "admin123"
+JWT_SECRET = "your-jwt-secret-key-change-in-production"
+
 # 静态资源配置 - 使用正确的格式
 [assets]
 directory = "./public"
